{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 78,
  "lineage": "0f04d4ad-9923-36b4-8b70-319bba6c47f9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-13T03:15:28.703-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pe-first/global/firewalls/k8s-firewall",
            "log_config": [],
            "name": "k8s-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/pe-first/global/networks/k8s-network",
            "priority": 1000,
            "project": "pe-first",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pe-first/global/firewalls/k8s-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-firewall-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "ipip"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-06-13T03:15:29.177-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pe-first/global/firewalls/k8s-firewall-internal",
            "log_config": [],
            "name": "k8s-firewall-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/pe-first/global/networks/k8s-network",
            "priority": 1000,
            "project": "pe-first",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pe-first/global/firewalls/k8s-firewall-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/pe-first/global/networks/k8s-network",
            "mtu": 0,
            "name": "k8s-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4733483696213345509",
            "project": "pe-first",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pe-first/global/networks/k8s-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.master_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20250606",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pe-first/zones/us-central1-c/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/pe-first/zones/us-central1-c/instances/k8s-master",
            "instance_id": "5931394695482983593",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7zDYmb5vJYkA7PdKmt9y/S6+u+jr+kIFUmT4wSM4fmDILRPg+TS4UJZXW0Z99HnWNwWqNwI8BPGf5RJmAbyPm+JuhgRF0LF0SExX8t2IsfT9QZE5WPgtbb9R+zz0VLvCviGvLBGosV6WUU99CYS8EUUocipn9d3J8mHAeVzRf+VBwvhzy+z3DE1EfeuhEDOc04+tC1UsK8mGcnL2751OIyCj7bkacZSk7ZnPkZUM1AhWLGrDYUPHUSgeapJ3XW/YWbLVjhEvotyKrvoK11cEd8hWWMqw1jI3In7vMNCUFStATeAOH/u/uDFB+yGHgmC1K8QRW7ACNyr/QCh6O1XryzUvhyoJBJKY732KzD8LFsNo6nkqhMRR9MHCX4dmQHz0nDFPFOMkhUyYYjouzJ6QnOH45khulRfCut7AxmdWtZc [...]
            },
            "metadata_fingerprint": "7g-5mKv3mls=",
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.135.137.110",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pe-first/global/networks/k8s-network",
                "network_ip": "10.128.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pe-first/regions/us-central1/subnetworks/k8s-network",
                "subnetwork_project": "pe-first"
              }
            ],
            "project": "pe-first",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pe-first/zones/us-central1-c/instances/k8s-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s"
            ],
            "tags_fingerprint": "3MfXgEAgskY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.worker_instance[\"0\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20250606",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pe-first/zones/us-central1-c/disks/k8s-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/pe-first/zones/us-central1-c/instances/k8s-worker-1",
            "instance_id": "796279204510844072",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7zDYmb5vJYkA7PdKmt9y/S6+u+jr+kIFUmT4wSM4fmDILRPg+TS4UJZXW0Z99HnWNwWqNwI8BPGf5RJmAbyPm+JuhgRF0LF0SExX8t2IsfT9QZE5WPgtbb9R+zz0VLvCviGvLBGosV6WUU99CYS8EUUocipn9d3J8mHAeVzRf+VBwvhzy+z3DE1EfeuhEDOc04+tC1UsK8mGcnL2751OIyCj7bkacZSk7ZnPkZUM1AhWLGrDYUPHUSgeapJ3XW/YWbLVjhEvotyKrvoK11cEd8hWWMqw1jI3In7vMNCUFStATeAOH/u/uDFB+yGHgmC1K8QRW7ACNyr/QCh6O1XryzUvhyoJBJKY732KzD8LFsNo6nkqhMRR9MHCX4dmQHz0nDFPFOMkhUyYYjouzJ6QnOH45khulRfCut7AxmdWtZc [...]
            },
            "metadata_fingerprint": "7g-5mKv3mls=",
            "name": "k8s-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.28.230.78",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pe-first/global/networks/k8s-network",
                "network_ip": "10.128.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pe-first/regions/us-central1/subnetworks/k8s-network",
                "subnetwork_project": "pe-first"
              }
            ],
            "project": "pe-first",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pe-first/zones/us-central1-c/instances/k8s-worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s"
            ],
            "tags_fingerprint": "3MfXgEAgskY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.worker_instance[\"1\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20250606",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pe-first/zones/us-central1-c/disks/k8s-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/pe-first/zones/us-central1-c/instances/k8s-worker-2",
            "instance_id": "8314250754691318955",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7zDYmb5vJYkA7PdKmt9y/S6+u+jr+kIFUmT4wSM4fmDILRPg+TS4UJZXW0Z99HnWNwWqNwI8BPGf5RJmAbyPm+JuhgRF0LF0SExX8t2IsfT9QZE5WPgtbb9R+zz0VLvCviGvLBGosV6WUU99CYS8EUUocipn9d3J8mHAeVzRf+VBwvhzy+z3DE1EfeuhEDOc04+tC1UsK8mGcnL2751OIyCj7bkacZSk7ZnPkZUM1AhWLGrDYUPHUSgeapJ3XW/YWbLVjhEvotyKrvoK11cEd8hWWMqw1jI3In7vMNCUFStATeAOH/u/uDFB+yGHgmC1K8QRW7ACNyr/QCh6O1XryzUvhyoJBJKY732KzD8LFsNo6nkqhMRR9MHCX4dmQHz0nDFPFOMkhUyYYjouzJ6QnOH45khulRfCut7AxmdWtZc [...]
            },
            "metadata_fingerprint": "7g-5mKv3mls=",
            "name": "k8s-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.171.222",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pe-first/global/networks/k8s-network",
                "network_ip": "10.128.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pe-first/regions/us-central1/subnetworks/k8s-network",
                "subnetwork_project": "pe-first"
              }
            ],
            "project": "pe-first",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pe-first/zones/us-central1-c/instances/k8s-worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s"
            ],
            "tags_fingerprint": "3MfXgEAgskY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}